--- a/.github/workflows/nightly-emscripten.yml
+++ b/.github/workflows/nightly-emscripten.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: 'theQRL/hyperion'
-          ref: 'develop'
+          ref: 'main'
           path: 'hyperion/'
           submodules: 'recursive'
 
